# FreeCAD

./: .dockerignore  .freecad-git.toml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .woodpecker.yml  Build-FreeCAD-Docker.bat  Build-FreeCAD-Windows.bat  CONTRIBUTING.md  Clean-FreeCAD-Pixi.bat  Start-All.bat  Start-FreeCAD.bat  Start-gazebo-bridge.bat  Start-gz-sim-fast.bat  Start-gz-sim.bat  Start-gz-sim.sh  Start-ros2.bat  Start-ros2.sh  Stop-gz-stack.bat  TODO  build_freecad.py  ci_test.ps1  pixi.toml  project.yaml  pytest.ini  requirements-bridge.txt  requirements-dev.txt  requirements-mcp-e2e.txt  run_docker_tests.py  run_docker_tests_free_cad.py  run_docker_tests_gz_sim.py  run_docker_tests_ros2.py  start_freecad.py  test_all_mcp.py
tools/freecad_git/: README.md  pyproject.toml
tools/freecad_git/freecad_addon/GitSidecar/: Init.py  InitGui.py
tools/freecad_git/schema/: freecad-git-sidecar.schema.json
tools/freecad_git/scripts/: precommit_check.py
tools/freecad_git/src/freecad_git/: __init__.py  archive.py  cli.py  config.py  diagnostics.py  document_xml.py  errors.py  export.py  freecad_adapter.py  model.py  normalize.py  properties.py  repack.py  schema_validate.py  serialize.py
tools/freecad_git/tests/: conftest.py  test_archive_security.py  test_cli.py  test_configuration.py  test_determinism.py  test_external_references.py  test_freecad_adapter.py  test_normalization.py  test_partdesign_conformance.py  test_repack.py  test_schema.py  test_semantic_diffs.py  test_xml_conformance.py
tools/freecad_git/tests/fixtures/: builder.py  (+10 more)
(+362 files in other folders)
